# HubHam

./: Makefile  Makefile.am  README.md
data/: c8h8_mma.graphml  graphm3.graphml  napthalene.graphml  napthalene_c2.graphml  phenanthrene.graphml  triangulene.graphml
src/: ex1.c  get_s2.c  get_s2.h  hubbard.c  hubbard.h  readgraphmllib.c  readgraphmllib.h  utils.c  utils.h
